# minimalist-lockscreen

./: .gitignore  CMakeLists.txt  README.md  build.sh  defs.h  display.c  display.h  main.c  pam.c  pam.h
.github/workflows/: makefile.yml
src/: args.c  args.h  defs.h  display.c  lockscreen.c  lockscreen.h  main.c  pam.c  pam.h  utils.c  utils.h
src/graphics/: graphics.c  graphics.h
src/graphics/modules/: date.c  date.h  password_entry.c
